src/objects/Apttus_Billing__CustomNumberingFieldMappings__mdt.object
<CustomObject>
    <description>This is used as an intermediate translation layer for mapping any of the values in all the 5 fields.</description>
    <fields>
        <fullName>Apttus_Billing__FieldCode__c</fullName>
        <description>Field Code.</description>
        <inlineHelpText>Field Code.</inlineHelpText>
        <label>Field Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__FieldNumber__c</fullName>
        <description>The number of the Field (1 - 5) this mapping pertains to. An empty field or null implies the mapping pertains to all of the fields.</description>
        <inlineHelpText>The number of the Field (1 - 5) this mapping pertains to. An empty field or null implies the mapping pertains to all of the fields.</inlineHelpText>
        <label>Field Number</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__FieldValue__c</fullName>
        <description>Holds the field value.</description>
        <inlineHelpText>Holds the field value.</inlineHelpText>
        <label>Field Value</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ObjectType__c</fullName>
        <description>The type of the object (Invoice, Payment, etc.) this field mapping pertains to. An empty value or null implies the mapping pertains to all of the object types.</description>
        <inlineHelpText>The type of the object (Invoice, Payment, etc.) this field mapping pertains to. An empty value or null implies the mapping pertains to all of the object types.</inlineHelpText>
        <label>Object Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Custom Numbering Field Mapping</label>
    <pluralLabel>Custom Numbering Field Mappings</pluralLabel>
</CustomObject>